--- a/MovieLibrary.csproj
+++ b/MovieLibrary.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="RestSharp" Version="110.2.1-alpha.0.16" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\posters\" />
+  </ItemGroup>
+
 </Project>
