--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-4SNMTAT;Database=MovieLibrary;Integrated Security=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=DESKTOP-4SNMTAT;Database=MovieLibrary;Integrated Security=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:azureml.database.windows.net,1433;Initial Catalog=MovieLibraryDb;Persist Security Info=False;User ID=mlsa;Password=Ss255dfZxy2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "MovieLibraryAPI": "https://movielibraryapi.azurewebsites.net/api"
+  }
 }
