SearchResult, navbar and profile settings design

--- a/MovieLibrary.csproj
+++ b/MovieLibrary.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\other\" />
     <Folder Include="wwwroot\images\posters\" />
   </ItemGroup>
 
